# AI_Reliability_Reporting

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: basic_usage.py  peers.json
src/reliability_reporter/: __init__.py  __main__.py  cli.py  config.py  models.py
src/reliability_reporter/analysis/: __init__.py  analyzer.py
src/reliability_reporter/categorization/: __init__.py  ai_client.py  category_generator.py  classifier.py  prompts.py  training.py
src/reliability_reporter/database/: __init__.py  db.py  scheduler.py
src/reliability_reporter/fetchers/: __init__.py  api_fetcher.py  base.py  generic_scraper.py  html_scraper.py
src/reliability_reporter/reporters/: __init__.py  markdown_reporter.py  pdf_reporter.py  spreadsheet_reporter.py
src/reliability_reporter/web/: __init__.py  app.py
src/reliability_reporter/web/templates/: base.html  index.html  reports.html  view_report.html
